2008-11-03  Julien Le Goff <jlegoff@flumotion.com>

	reviewed by: Arek Korbik <arek@flumotion.com>

	* flumotion/manager/component.py:
	  Added a condition in the clock synchronization code that checks
	  whether components belong to the same flow.
	  Fixes #1160 and #1151

2008-11-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/worker/checks/gst010.py:
	  Fixed an identation error that makes the check to crash.

2008-11-03  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	  options error fixed and code clean up.

2008-10-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  If port can be None, it is a crime to debug it with %d.  Change
	  to %r instead.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  Only import eventcalendar where we need it, so we don't always
	  drag in python-icalendar.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Add a directory for rrd databases that the group can write to.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/plugs.xml:
	* flumotion/component/plugs/rrd.py:
	  Make it 8 days/weeks/months/years instead of 2.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/Makefile.am:
	  Dist the source flumotion-trial.in, not the generated version.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/plugs.xml:
	  Add 'step-size' property.  Cleanups.
	* flumotion/component/plugs/rrd.py:
	  Make step-size configurable.  More cleanups.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/rrd.py:
	  camelcasing, privatizing, variable renaming, commenting,
	  logging changes.

2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/rrd.py: